[mod] 전체 터치영역 수정

--- a/app/src/main/res/layout/activity_work_detail_rider.xml
+++ b/app/src/main/res/layout/activity_work_detail_rider.xml
@@ -135,6 +135,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="20dp"
+                        android:paddingHorizontal="2dp"
+                        android:paddingVertical="2dp"
                         android:src="@drawable/ic_arrow_right"
                         app:layout_constraintBottom_toBottomOf="@+id/tv_daily_work_type_title"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -198,6 +200,8 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="8dp"
                         android:onClick="@{() -> viewModel.minusDeliveryCount()}"
+                        android:paddingHorizontal="2dp"
+                        android:paddingVertical="2dp"
                         android:src="@drawable/ic_minus_active"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/tv_amount"
@@ -223,6 +227,8 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="20dp"
                         android:onClick="@{() -> viewModel.plusDeliveryCount()}"
+                        android:paddingHorizontal="2dp"
+                        android:paddingVertical="2dp"
                         android:src="@drawable/ic_plus_active"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -348,6 +354,8 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="8dp"
                         android:onClick="@{() -> viewModel.minusPromotionCount()}"
+                        android:paddingHorizontal="2dp"
+                        android:paddingVertical="2dp"
                         android:src="@drawable/ic_minus_active"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/tv_promotion"
@@ -373,6 +381,8 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="20dp"
                         android:onClick="@{() -> viewModel.plusPromotionCount()}"
+                        android:paddingHorizontal="2dp"
+                        android:paddingVertical="2dp"
                         android:src="@drawable/ic_plus_active"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
