--- a/app/src/main/res/layout/activity_work_detail_day_labor.xml
+++ b/app/src/main/res/layout/activity_work_detail_day_labor.xml
@@ -135,6 +135,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="20dp"
+                        android:paddingHorizontal="2dp"
+                        android:paddingVertical="2dp"
                         android:src="@drawable/ic_arrow_right"
                         app:layout_constraintBottom_toBottomOf="@+id/tv_daily_work_type_title"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -391,6 +393,8 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="8dp"
                         android:onClick="@{() -> viewModel.minusManHourCount()}"
+                        android:paddingHorizontal="2dp"
+                        android:paddingVertical="2dp"
                         android:src="@drawable/ic_minus_active"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/tv_man_hour"
@@ -416,6 +420,8 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="20dp"
                         android:onClick="@{() -> viewModel.plusManHourCount()}"
+                        android:paddingHorizontal="2dp"
+                        android:paddingVertical="2dp"
                         android:src="@drawable/ic_plus_active"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
