--- a/app/src/main/res/layout/fragment_workbook.xml
+++ b/app/src/main/res/layout/fragment_workbook.xml
@@ -90,7 +90,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="20dp"
                         android:background="@drawable/background_workbook_goal"
-                        android:paddingVertical="16dp"
+                        android:paddingTop="16dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent">
@@ -208,32 +208,43 @@
 
                             <androidx.constraintlayout.widget.ConstraintLayout
                                 android:id="@+id/layout_goal_setting"
-                                android:layout_width="wrap_content"
+                                android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_marginTop="16dp"
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toBottomOf="@+id/view_divider">
 
-                                <TextView
-                                    android:id="@+id/tv_goal_setting_title"
+                                <androidx.constraintlayout.widget.ConstraintLayout
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="@string/goal_setting"
-                                    android:textAppearance="@style/TextAppearance.Body2_Medium"
-                                    android:textColor="@color/coolgray_06"
-                                    app:layout_constraintBottom_toBottomOf="parent"
+                                    android:layout_marginVertical="16dp"
                                     app:layout_constraintStart_toStartOf="parent"
-                                    app:layout_constraintTop_toTopOf="parent" />
+                                    app:layout_constraintEnd_toEndOf="parent"
+                                    app:layout_constraintTop_toTopOf="parent"
+                                    app:layout_constraintBottom_toBottomOf="parent">
 
-                                <ImageView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginStart="4dp"
-                                    android:src="@drawable/ic_arrow_right"
-                                    app:layout_constraintStart_toEndOf="@+id/tv_goal_setting_title"
-                                    app:layout_constraintTop_toTopOf="parent" />
+                                    <TextView
+                                        android:id="@+id/tv_goal_setting_title"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:text="@string/goal_setting"
+                                        android:textAppearance="@style/TextAppearance.Body2_Medium"
+                                        android:textColor="@color/coolgray_06"
+                                        app:layout_constraintBottom_toBottomOf="parent"
+                                        app:layout_constraintStart_toStartOf="parent"
+                                        app:layout_constraintTop_toTopOf="parent" />
+
+                                    <ImageView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:layout_marginStart="4dp"
+                                        android:src="@drawable/ic_arrow_right"
+                                        app:layout_constraintStart_toEndOf="@+id/tv_goal_setting_title"
+                                        app:layout_constraintTop_toTopOf="parent" />
+
+                                </androidx.constraintlayout.widget.ConstraintLayout>
+
 
                             </androidx.constraintlayout.widget.ConstraintLayout>
 
