--- a/app/src/main/res/layout/activity_work_detail_caddie.xml
+++ b/app/src/main/res/layout/activity_work_detail_caddie.xml
@@ -438,6 +438,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="20dp"
                     android:layout_marginTop="16dp"
+                    android:visibility="@{viewModel.workType.name != DailyWorkType.REST.name ? View.VISIBLE : View.INVISIBLE}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/layout_baeto"
